--- a/20191316008cuiliangkunGraduationProject/app/src/main/AndroidManifest.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".userpage"></activity>
+        <activity android:name=".favorite"></activity>
+        <activity android:name=".order" />
+        <activity android:name=".userpage" />
         <activity android:name=".hotelpage" />
         <activity android:name=".MainActivity">
             <intent-filter>
