--- a/20191316008cuiliangkunGraduationProject/app/src/main/AndroidManifest.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".favorite"></activity>
+        <activity android:name=".searchresult"></activity>
+        <activity android:name=".favorite" />
         <activity android:name=".order" />
         <activity android:name=".userpage" />
         <activity android:name=".hotelpage" />
