--- a/20191316008cuiliangkunGraduationProject/app/src/main/AndroidManifest.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+<!--    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />-->
+
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".regist"></activity>
+        <activity android:name=".yuding"></activity>
+        <activity android:name=".regist" />
         <activity android:name=".login" />
         <activity android:name=".wbo" />
         <activity android:name=".searchresult" />
