--- a/20191316008cuiliangkunGraduationProject/app/src/main/AndroidManifest.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/AndroidManifest.xml
@@ -4,8 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-<!--    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />-->
-
 
     <application
         android:allowBackup="true"
@@ -14,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".yuding"></activity>
+        <activity android:name=".manageAll"></activity>
+        <activity android:name=".manage" />
+        <activity android:name=".review" />
+        <activity android:name=".yuding" />
         <activity android:name=".regist" />
         <activity android:name=".login" />
         <activity android:name=".wbo" />
